Tue May 14 12:29:35 2002  Jonathan Blandford  <jrb@redhat.com>

	* theme-switcher.c (read_themes): try to scroll to theme.
	Currently appears to be a little broken somewhere.

	* theme-properties.glade: clean up, and add an atk relation, #76416

2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* theme-properties.glade:
	Remove ellipsis after "Go to theme folder".
	
	* theme-switcher.c: (show_manage_themes):
	Create the .themes directory if it doesn't exist.
	
2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* theme-properties.glade:
	Remove ellipsis after "Go to theme folder".
	
	* theme-switcher.c: (show_manage_themes):
	Create the .themes directory if it doesn't exist.
	
2002-05-08  Jody Goldberg <jody@gnome.org>

	* theme-switcher.c (cb_dialog_response) : new.
	(setup_dialog) : support help.

Mon May  6 17:40:17 2002  Jonathan Blandford  <jrb@redhat.com>

	* theme-switcher.c: remove print statements

	* theme-properties.glade: Fix up UI.  Not perfect, but better.

2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* theme-properties.glade: Further revamp based on seth's suggestions.

2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* theme-properties.glade: Hide checkbutton until we actually
	implement that...put it on the backburner for now.

2002-04-29  Rachel Hestilow  <hestilow@ximian.com>

	* theme-properties.glade, theme-swither.c: Add support
	for install/manage themes.
	
2002-04-27  Seth Nickell  <snickell@stanford.edu>

	* gtk-theme-selector.desktop.in:

	Change name, move out of Advanced category.
	
	* theme-properties.glade:

	Tweak padding / spacing.

	* gtk-theme-selector.desktop.in.in:

	Old cruft file, delete.
	
2002-04-26  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-font-and-theme-properties.c:
	* gnome-font-and-theme-properties.glade:
	* gtk-theme-selector.glade:
	* main.c:
	* theme-properties.glade:
	* theme-switcher.c: (create_dialog), (theme_selection_changed),